--- a/miniproject/build.gradle
+++ b/miniproject/build.gradle
@@ -28,9 +28,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mindrot:jbcrypt:0.4' // 비밀번호 해쉬 검증
-	implementation 'com.google.firebase:firebase-admin:9.4.1'
-	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2'
-	implementation 'org.apache.httpcomponents.core5:httpcore5:5.2'
+	implementation 'com.google.firebase:firebase-admin:9.4.1' // firebase dependency
+	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2' // 연결을 위한 추가적인 dependency
+	implementation 'org.apache.httpcomponents.core5:httpcore5:5.2' // 연결을 위한 추가적인 dependency
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
