--- a/miniproject/src/main/resources/application.properties
+++ b/miniproject/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.devtools.restart.quiet-period=500
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
