--- a/miniproject/src/main/resources/application.properties
+++ b/miniproject/src/main/resources/application.properties
@@ -37,6 +37,16 @@ spring.devtools.restart.quiet-period=500
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 
+# ??? ??
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cook961004@gmail
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
