--- a/miniproject/src/main/resources/application.properties
+++ b/miniproject/src/main/resources/application.properties
@@ -40,11 +40,14 @@ spring.devtools.restart.additional-paths=src/main/java
 # ??? ??
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=cook961004@gmail
-spring.mail.password=your-email-password
+spring.mail.username=cook961004@gmail.com
+spring.mail.password="bzzh zbtg vqlk nwnm"
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework.mail.smtp=DEBUG
+
 
 
 spring.servlet.multipart.max-file-size=10MB
