--- a/mini-project-react/package.json
+++ b/mini-project-react/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
+    "firebase-tools": "^13.29.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
